Add routing for most of client w/ private routes for logged in users, integrate signup/login auth and localstorage for jwts

--- a/boonelist-server/package.json
+++ b/boonelist-server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently --kill-others-on-fail \"npm run server\"",
+    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "client": "cd ../boonelist-client && npm start",
     "server": "nodemon server.js",
     "test": "jest -i"
   },
