--- a/boonelist-client/package.json
+++ b/boonelist-client/package.json
@@ -11,8 +11,10 @@
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-sticky-el": "^2.0.9",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
