--- a/boonelist-client/package.json
+++ b/boonelist-client/package.json
@@ -10,6 +10,8 @@
     "bootstrap": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^17.0.2",
     "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
