--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "index.js",
     "scripts": {
       "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-      "client": "cd /boonelist-client && npm start",
-      "server": "cd /boonelist-server && nodemon server.js",
+      "client": "cd boonelist-client && npm start",
+      "server": "nodemon server.js",
       "test": "jest -i"
     },
     "author": "david garner",
