--- a/boonelist-client/.gitignore
+++ b/boonelist-client/.gitignore
@@ -1,9 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+.DS_Store
+/boonelist-server/config.js
+
+
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
+package-lock.json
 
 # testing
 /coverage
@@ -12,6 +17,8 @@
 /build
 
 # misc
+config.js
+npm-debug.log*
 .DS_Store
 .env.local
 .env.development.local
